syntax = "proto3";

import "google/protobuf/timestamp.proto";

package auth;

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpInResponse) {}
  rpc ValidateUser(ValidateUserRequest) returns (User) {}
  rpc SignIn(User) returns (SignUpInResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc SignOut(SignOutRequest) returns (SignOutResponse) {}
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignUpInResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 10;
  UserRole role = 4;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

enum UserRole {
  PROVIDER = 0;
  ADMIN = 1;
}

message ValidateUserRequest {
  string email = 1;
  string pass = 2;
}

message RefreshTokenRequest {
  User user = 1;
  string refresh_token = 2;
}

message RefreshTokenResponse { string access_token = 1; }

message SignOutRequest { string user_id = 1; }

message SignOutResponse {
  string id = 1;
  string user_id = 2;
  string value = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message ValidateTokenRequest { string token = 1; }

message ValidateTokenResponse { string sub = 1; }
