syntax = "proto3";
import "google/protobuf/timestamp.proto";

package bookings;

service BookingsService {
  rpc FindAll(FindAllRequest) returns (FindAllResponse) {}
  rpc FindOne(FindOneRequest) returns (Booking) {}
  rpc FindBookingsCount(Empty) returns (FindBookingsCountResponse) {}
}

enum ServiceType {
  MANICURE = 0;
  PEDICURE = 1;
  HAIRCUT = 2;
}

message Booking {
  string id = 1;
  string user_id = 2;
  string client_name = 3;
  string client_phone = 4;
  ServiceType service_type = 5;
  google.protobuf.Timestamp starts_at = 6;
  optional string notes = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message FindAllRequest {
  string user_id = 1;
  optional bool is_past = 2;
  optional int32 limit = 5;
  optional int32 page = 6;
}

message FindAllResponse {
  repeated Booking bookings = 1;
  Meta meta = 2;
}

message Meta {
  int32 total = 1;
  int32 current_page = 2;
  int32 last_page = 3;
  bool has_next_page = 4;
  bool has_previous_page = 5;
}

message FindOneRequest { string id = 1; }

message FindOneResponse { Booking booking = 1; }

message Empty {}

message FindBookingsCountResponse { int32 bookings_count = 1; }